maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:19: error: identifier expected but integer literal found.
 le mur est : 5=devant, 1=gauche, 3=droite, 
              ^